// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ChannelElement given bindings field of type ChannelBindingsElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ChannelBindingsElement)))
`;

exports[`refractor elements ChannelElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ChannelElement given externalDocs field of type ExternalDocumentationElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;

exports[`refractor elements ChannelElement given externalDocs field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ChannelElement given messages field contains field of type MessageElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (MessagesElement
      (MemberElement
        (StringElement)
        (MessageElement)))))
`;

exports[`refractor elements ChannelElement given messages field contains field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (MessagesElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements ChannelElement given parameters field contains field of type ParameterElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ParametersElement
      (MemberElement
        (StringElement)
        (ParameterElement)))))
`;

exports[`refractor elements ChannelElement given parameters field contains field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (ParametersElement
      (MemberElement
        (StringElement)
        (ReferenceElement
          (MemberElement
            (StringElement)
            (StringElement)))))))
`;

exports[`refractor elements ChannelElement given tags field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (TagsElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements ChannelElement given tags field contains list of type TagElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (TagsElement
      (TagElement))))
`;

exports[`refractor elements ChannelElement should refract to semantic ApiDOM tree 1`] = `
(ChannelElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ObjectElement
        (MemberElement
          (StringElement)
          (StringElement)))
      (ObjectElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;
